# cortex

./: CMakeLists.txt  README.md
GTest/docs/: advanced.md  faq.md  gmock_cheat_sheet.md  gmock_cook_book.md  gmock_faq.md  gmock_for_dummies.md
GTest/docs/reference/: assertions.md  matchers.md  mocking.md  testing.md
GTest/googletest/include/gtest/internal/: gtest-param-util.h
GTest/googletest/src/: gtest-internal-inl.h  gtest-port.cc  gtest.cc
examples/: MLP.cpp
include/: init_types.h  matrix.h  model.h  parameter.h
include/activations/: activation.h  relu.h  sigmoid.h  softmax.h  tanh.h
include/data_utils/: cortex_dataset.h  dataloader.h
include/layers/: layer.h  linear.h
include/loss_functions/: crossentropy_loss.h  loss.h  mse_loss.h
include/optimizers/: adam.h  optimizer.h  sgd.h
src/: dataloader.cpp  dataset.cpp  main.cpp  matrix.cpp  parameter.cpp
src/activations/: relu.cpp  sigmoid.cpp  softmax.cpp  tanh.cpp
src/data_utils/: cortex_dataset.cpp
src/layers/: linear.cpp
src/optimizers/: adam.cpp  optimizer.cpp  sgd.cpp
tests/: ActivationsTest.cpp  LinearTest.cpp  MatrixTest.cpp  OptimizerTests.cpp  ParameterTest.cpp  test_main.cpp
